<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddSkillActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/addskill_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkorange"></android.support.v7.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/add_skill_tv1"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="130dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:src="@mipmap/addskill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/add_skill_tv2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="20dp"
            android:text="@string/add_skill_tv3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="20dp"
            android:text="@string/add_skill_tv4"/>

            <ImageView
                android:id="@+id/addskill_plus"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@mipmap/plus"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:id="@+id/linear_addskill"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">
        </LinearLayout>


        <View
            android:id="@+id/view_mine_line1"
            android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:layout_marginTop="50dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/add_skill_tv5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="20dp"
            android:text="@string/add_skill_tv6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="20dp"
            android:text="@string/add_skill_tv7"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="20dp"
            android:text="@string/add_skill_tv7"/>
        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="前往认证我的技能"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonshape"
            android:textColor="@color/bg_white"
            android:textSize="18dp" />

    </LinearLayout>
</ScrollView>